# kairoi

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs  instrument.rs
kairoi/: Cargo.toml
kairoi-macro/: Cargo.toml
kairoi-macro/src/: lib.rs
kairoi-macros/: Cargo.toml
kairoi-macros/src/: lib.rs
kairoi/examples/: basic.rs  instrument.rs
kairoi/src/: event.rs  format.rs  handler.rs  lib.rs  span.rs
kairoi/src/handlers/: console_handler.rs
src/: channel.rs  error.rs  event.rs  format.rs  handler.rs  lib.rs  macros.rs  node.rs  span.rs
src/handlers/: console_handler.rs  mod.rs
