[package]
name = "kairoi-macros"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/sharp0802/kairoi"
license = "MIT"
keywords = ["logging", "macros"]
description = "Procedural macros for kairoi crate"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
