[package]
name = "kairoi"
version = "0.2.3"
edition = "2024"
repository = "https://github.com/sharp0802/kairoi"
license = "MIT"
keywords = ["logging"]
description = "Another application-level tracing library"
readme = "../README.md"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }

[dependencies]
crossbeam-channel = "0.5.15"
chrono = "0.4.42"
lazy_static = "1.5.0"
tokio = { version = "1.47.1", features = ["time", "rt"] }
parking_lot = "0.12.4"
dashmap = "6.1.0"
kairoi-macros = { path = "../kairoi-macros", version = "0.2.0" }